fix: improve navigation arrow visibility on light backgrounds.

--- a/src/styles/ImageCarousel.scss
+++ b/src/styles/ImageCarousel.scss
@@ -12,7 +12,7 @@
 }
 
 .image-carousel__slider > button {
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.155);
   outline: none;
   border: 0;
   color: whitesmoke;
